--- a/package.json
+++ b/package.json
@@ -15,11 +15,26 @@
   },
   "devDependencies": {
     "babel-core": "^5.8.21",
+    "browser-sync": "^2.8.2",
+    "concat": "^1.0.0",
     "express": "^4.13.3",
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.2.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.2.0",
+    "main-bower-files": "^2.9.0",
+    "minimatch": "^2.0.10",
+    "uglify": "^0.1.5"
   },
   "dependencies": {
     "babel": "^5.8.21",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
     "cors": "^2.7.1",
@@ -29,11 +44,15 @@
     "express": "^4.13.3",
     "express-session": "^1.11.3",
     "helmet": "^0.10.0",
+    "jsonwebtoken": "^5.0.4",
     "mongoose": "^4.1.1",
     "morgan": "^1.6.1",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
     "path": "^0.11.14",
     "query-string": "^2.4.0",
     "traceur": "0.0.91",
-    "typescript": "^1.5.3"
+    "typescript": "^1.5.3",
+    "uglify": "^0.1.5"
   }
 }
